<?xml version="1.0" encoding="utf-8"?>
<!-- action bar menu for main movie grid screen -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_grid_sort"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort_grid"
        android:title="@string/menu_sort_by">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_item_popular" android:title="@string/menu_popular"/>
                <item android:id="@+id/menu_item_top_rated" android:title="@string/menu_top_rated"/>
                <item android:id="@+id/menu_item_now_playing" android:title="@string/menu_now_playing"/>
                <item android:id="@+id/menu_item_upcoming" android:title="@string/menu_upcoming"/>
                <item android:id="@+id/menu_item_favorites" android:title="@string/menu_favorites"/>
            </group>
        </menu>
    </item>
</menu>